dnl configure.ac
dnl Copyright (C) 2017-2018 Michael Rosset <mike.rosset@gmail.com>

dnl This file is part of Nomad

dnl Nomad is free software: you can redistribute it and/or modify it
dnl under the terms of the GNU General Public License as published by the
dnl Free Software Foundation, either version 3 of the License, or
dnl (at your option) any later version.

dnl Nomad is distributed in the hope that it will be useful, but
dnl WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
dnl See the GNU General Public License for more details.

dnl You should have received a copy of the GNU General Public License along
dnl with this program.  If not, see <http://www.gnu.org/licenses/>.

AC_PREREQ([2.69])
AC_INIT([nomad-3rdparty], [0.1.2], [mike.rosset@gmail.com])
AM_INIT_AUTOMAKE

AC_CONFIG_FILES([Makefile])
AC_CONFIG_SUBDIRS([shroud emacsy g-golf])

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
